Authorize.net module upgraded to Broadleaf 3.0.0-GA.