@@ -87,8 +87,8 @@
                 </plugin>
                 <plugin>
                     <groupId>org.zeroturnaround</groupId>
-                    <artifactId>javarebel-maven-plugin</artifactId>
-                    <version>1.0.5</version>
+                    <artifactId>jrebel-maven-plugin</artifactId>
+                    <version>1.1.3</version>
                 </plugin>
                 <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                 <plugin>
@@ -104,10 +104,10 @@
                                             org.zeroturnaround
                                         </groupId>
                                         <artifactId>
-                                            javarebel-maven-plugin
+                                            jrebel-maven-plugin
                                         </artifactId>
                                         <versionRange>
-                                            [1.0.5,)
+                                            [1.1.3,)
                                         </versionRange>
                                         <goals>
                                             <goal>generate</goal>
@@ -162,6 +162,13 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jettyVersion}</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+                </configuration>
+            </plugin>
         </plugins>
         <testSourceDirectory>src/test/java</testSourceDirectory>
         <testResources>
@@ -178,7 +185,7 @@
                 <plugins>
                     <plugin>
                         <groupId>org.zeroturnaround</groupId>
-                        <artifactId>javarebel-maven-plugin</artifactId>
+                        <artifactId>jrebel-maven-plugin</artifactId>
                         <executions>
                             <execution>
                                 <id>generate-rebel-xml</id>
@@ -187,10 +194,34 @@
                                     <goal>generate</goal>
                                 </goals>
                             </execution>
+                            <execution>
+                                <id>generate-test-rebel-xml</id>
+                                <phase>process-test-resources</phase>
+                                <goals>
+                                    <goal>generate</goal>
+                                </goals>
+                                <configuration>
+                                    <classpath>
+                                        <resources>
+                                            <resource>
+                                                <directory>target/test-classes</directory>
+                                            </resource>
+                                        </resources>
+                                    </classpath>
+                                    <rebelXmlDirectory>target/test-classes</rebelXmlDirectory>
+                                </configuration>
+                            </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
-                            <relativePath>../</relativePath>
-                            <rootPath>$${rebel.root}</rootPath>
+                            <argLine>
+                                -Xmx1024m -XX:MaxPermSize=512m -Xdebug
+                                -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083
+                                -javaagent:${jrebel.path} -Drebel.log.stdout=true
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -285,6 +316,11 @@
             <groupId>org.broadleafcommerce</groupId>
             <artifactId>integration</artifactId>
             <version>${blc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.broadleafcommerce</groupId>
+            <artifactId>integration</artifactId>
+            <version>${blc.version}</version>
             <type>jar</type>
             <classifier>tests</classifier>
             <scope>test</scope>
@@ -308,7 +344,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>3.1.3.RELEASE</version>
+            <version>3.2.2.RELEASE</version>
             <type>jar</type>
             <scope>test</scope>
         </dependency>
@@ -335,6 +371,12 @@
             <artifactId>anet-java-sdk</artifactId>
             <version>1.4.6</version>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>2.2.9</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
